<resources>
    <string name="app_name">WeatherKODE</string>

    <string name="map_fragment_title">Global weather</string>
    <string name="search">Search</string>

    <string name="show_weather">Show weather</string>
    <string name="close">Close</string>

    <string name="share">Share</string>
    <string name="celsius">&#176;C</string>
    <string name="weather_icon">Weather icon</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">%1$d%%</string>
    <string name="wind">Wind</string>
    <string name="wind_value">%1$s %2$.1f m/s</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_value">%1$d mm Hg</string>
    <string name="weather_image">Weather today</string>

    <string name="error_city_not_found_title">Could not find forecast for this city.</string>
    <string name="error_city_not_found">Forecast in this city is not available.</string>
    <string name="error_city_not_found_button">Go back</string>

    <string name="error_no_internet_title">No internet</string>
    <string name="error_no_internet">It appears that your device does not have 
        network connection at the moment. Please check your network connection and try again.</string>

    <string name="error_server_title">Unknown server error</string>
    <string name="error_server">There is something with a server. 
        Try refreshing the screen later.</string>

    <string name="error_timeout_title">Server timeout</string>
    <string name="error_timeout">@string/error_server</string>


    <string name="error_base_title">Something went wrong</string>
    <string name="error_base">The problem is on our side, we are already looking into it.
        Please try refreshing the screen later.</string>

    <string name="error_permission_location">Permission is not granted</string>

    <string name="error_last_location">Could not get last location</string>

    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>

    <string name="in_development">Feature is in development</string>
</resources>